--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,15 @@ body{
     margin: 0px;
 }
 .heading{
-    font-size: 6em;
+    font-size: 4em;
     margin: 0px auto 0px;
     text-align: center;
     padding:30px 0px 100px 0px;
     font-family: 'Montserrat', sans-serif;
     color: #D47AE8;
+    size-adjust: small;
 }
+
 h1{
     margin:0px;
 }
